<resources>
    <string name="app_name">TrackerMVVM</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="bad_habit">Bad habit</string>
    <string name="quantity">Quantity</string>
    <string name="good_habit">Good habit</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="periodicity">Periodicity</string>
    <string name="color">Color</string>
    <string name="save_the_habit">Save the habit</string>
    <string name="cancel">Cancel</string>
    <string name="application_information">Application information</string>
    <string-array name="priorities_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>