<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/nameHabit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:hint="@string/name"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:hint="@string/description"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameHabit"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner">

            <RadioButton
                android:id="@+id/radioButtonGood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/good_habit" />

            <RadioButton
                android:id="@+id/radioButtonBad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad_habit" />
        </RadioGroup>

        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:hint="@string/quantity"
            android:inputType="number"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <EditText
            android:id="@+id/periodicity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:hint="@string/periodicity"
            android:inputType="number"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantity"/>

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/periodicity">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:background="@drawable/gradient"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image5"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image6"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image7"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image8"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image9"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image10"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image11"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image12"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image13"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image14"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image15"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/image16"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/border" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/color_text"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:text="@string/color"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_scroll"/>

        <TextView
            android:id="@+id/color"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/color_text"
            app:layout_constraintTop_toBottomOf="@id/horizontal_scroll"/>

        <Button
            android:id="@+id/save_habit"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:text="@string/save_the_habit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_text"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save_habit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>